# habit_tracker

./: .coverage  .env  .env.sample  .flake8  README.md  coverage_report.md  habit_fixture.json  pyproject.toml  requirements.txt  users_fixture.json
.github/workflows/: ci.yaml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  pagination.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: add_test_data.py
habits/migrations/: 0001_initial.py  0002_alter_habit_execution_time_alter_habit_periodicity_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
